--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -15,5 +15,6 @@
   ],
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
-  }
+  },
+  "gitHead": "f8125ced2c6c18337e55c09c8a993887b0ade80a"
 }
