--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "dev": "webpack -w"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +18,6 @@
     "@xini-cli/utils": "^1.0.3"
   },
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "@xini-cli/core": "^1.0.4"
   }
 }
